align menu in the center and other fixes

--- a/src/css/site.css
+++ b/src/css/site.css
@@ -3,6 +3,10 @@ body {
     height: 100%;
 }
 
+.title, .menubar {
+    width: 100%;
+    text-align: center;
+}
 div#app {/*
   position: fixed;
   z-index:1;
